ghc-4335c07/testsuite/tests/typecheck/should_fail/T13105.stderr

T13105.hs:22:8: error:
    A levity-polymorphic type is not allowed here:
      Type: Rep Int
      Kind: TYPE (RepRep Int)
    In the type of binder ‘n’
